@startuml

!theme monokai from ..\.styles

class Vehicle {
    +{static}wheels: <i>int</i>
    +speed: <i>int</i>
    __init__()
    +move()
}
class Bicycle {
    +{static}wheels: <i>int</i>
}
class Car
class Train {
    +{static}wheels: <i>int</i>
    +move()
}
class Aircraft {
    +{static}wheels: <i>int</i>
    +fly_speed: <i>int</i>
    __init__()
    +move()
    +fly()
}

Vehicle <|-- Bicycle
Vehicle <|-- Car
Vehicle <|-- Train
Vehicle <|-- Aircraft : "неэффективное наследование"

@enduml